# ROS-2-Coding-Interview

./: README.md
catkin_ws/install/: local_setup.sh  setup.sh
catkin_ws/install/driver/lib/driver/: driver_node
catkin_ws/install/driver/share/ament_index/resource_index/package_run_dependencies/: driver
catkin_ws/install/driver/share/driver/: package.sh
catkin_ws/install/driver_msgs/share/driver_msgs/: local_setup.sh  package.sh  package.xml
catkin_ws/install/process/share/process/: package.sh
catkin_ws/log/: latest_build  latest_list
catkin_ws/src/driver/: CMakeLists.txt
catkin_ws/src/driver/src/: driver_node.cpp
catkin_ws/src/driver/src/install/: local_setup.sh  setup.sh
catkin_ws/src/driver/src/log/: latest_build
catkin_ws/src/driver_msgs/: CMakeLists.txt  package.xml  package.xml.bak
catkin_ws/src/process/: package.xml  setup.py
catkin_ws/src/process/process/: process_node.py
